--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Vaibhav site</title>
 </head>
 <body>
-    hi! i am vaibhav.
+    <h1>hi</h1>
+    <h2>i am vaibhav.</h2> 
 </body>
 </html>
